--- a/Cpp/AivTestCpp/.gitignore
+++ b/Cpp/AivTestCpp/.gitignore
@@ -18,7 +18,7 @@
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
+#*.dll
 
 # Fortran module files
 *.mod
@@ -116,7 +116,7 @@ StyleCopReport.xml
 *.ilk
 *.meta
 *.iobj
-*.pdb
+#*.pdb
 *.ipdb
 *.pgc
 *.pgd
